# blandango

./: Cargo.toml  README.md
src/: api.rs  client.rs  collection.rs  database.rs  document.rs  graph.rs  index.rs  lib.rs  model.rs  params.rs  query.rs  relational.rs  responses.rs
tests/: collection_tests.rs  database_tests.rs  document_tests.rs  indexes_tests.rs  query_tests.rs
tests/model/: mod.rs
