[package]
name = "blandango"
version = "0.1.0"
authors = ["bland <NothingsBland@proton.me>"]
edition = "2021"

[lib]
name = "blandango"
path = "src/lib.rs"

[dependencies]
base64 = { version = "0.21.0" }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_url_params = { version = "0.2.1" }
convert_case = { version = "0.6.0" }
log = { version = "0.4.17" }
regex = { version = "1" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }

[build-dependencies]